Fix party overview in dark mode

--- a/src/components/modals/party/party-modal.scss
+++ b/src/components/modals/party/party-modal.scss
@@ -15,3 +15,11 @@
 		text-align: center;
 	}
 }
+
+@media (prefers-color-scheme: dark) {
+	.party-modal {
+		.ant-btn.ant-btn-text {
+			color: rgba(255, 255, 255, 0.88);
+		}
+	}
+}
